Refactor to not use tomcat, use java 17